--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "5.20.6",
+    "antd": "^5.20.6",
     "axios": "^1.8.2",
-    "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "14.2.7",
+    "react": "^18",
+    "react-dom": "^18",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
