--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-select-country-list": "^2.2.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
